--- a/easy-sonar-prop-setting/package.json
+++ b/easy-sonar-prop-setting/package.json
@@ -61,42 +61,47 @@
         {
           "command": "easy-sonar-prop-setting.addSonarSources",
           "group": "sonar@1",
-          "when": "config.easySonarPropSetting.enableAddSonarSources"
+          "when": "config.easySonarPropSetting.enableAddSonarSources && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.clearAndAddSonarSources",
           "group": "sonar@2",
-          "when": "config.easySonarPropSetting.enableClearAndAddSonarSources"
+          "when": "config.easySonarPropSetting.enableClearAndAddSonarSources && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.addSonarTests",
           "group": "sonar@3",
-          "when": "config.easySonarPropSetting.enableAddSonarTests"
+          "when": "config.easySonarPropSetting.enableAddSonarTests && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.clearAndAddSonarTests",
           "group": "sonar@4",
-          "when": "config.easySonarPropSetting.enableClearAndAddSonarTests"
+          "when": "config.easySonarPropSetting.enableClearAndAddSonarTests && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.addSonarTestInclusions",
           "group": "sonar@5",
-          "when": "config.easySonarPropSetting.enableAddSonarTestInclusions"
+          "when": "config.easySonarPropSetting.enableAddSonarTestInclusions && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.clearAndAddSonarTestInclusions",
           "group": "sonar@6",
-          "when": "config.easySonarPropSetting.enableClearAndAddSonarTestInclusions"
+          "when": "config.easySonarPropSetting.enableClearAndAddSonarTestInclusions && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.addSonarExclusions",
           "group": "sonar@7",
-          "when": "config.easySonarPropSetting.enableAddSonarExclusions"
+          "when": "config.easySonarPropSetting.enableAddSonarExclusions && resourceFilename != 'sonar-project.properties'"
         },
         {
           "command": "easy-sonar-prop-setting.clearAndAddSonarExclusions",
           "group": "sonar@8",
-          "when": "config.easySonarPropSetting.enableClearAndAddSonarExclusions"
+          "when": "config.easySonarPropSetting.enableClearAndAddSonarExclusions && resourceFilename != 'sonar-project.properties'"
+        },
+        {
+          "command": "easy-sonar-prop-setting.runSonarScanner",
+          "group": "sonar@9",
+          "when": "config.easySonarPropSetting.enableRunSonarScanner && resourceFilename == 'sonar-project.properties'"
         }
       ]
     },
@@ -169,15 +174,10 @@
           "default": false,
           "description": "Enable or disable the clear and add function for sonar exclusions."
         },
-        "easySonarPropSetting.showRunSonarScannerButton": {
+        "easySonarPropSetting.enableRunSonarScanner": {
           "type": "boolean",
           "default": true,
-          "description": "Show or hide the Run Sonar Scanner button in the status bar."
-        },
-        "easySonarPropSetting.runSonarScannerButtonText": {
-          "type": "string",
-          "default": "$(play) Run Sonar Scanner",
-          "description": "The text for the Run Sonar Scanner button in the status bar."
+          "description": "Enable or disable the function for running sonar scanner."
         }
       }
     }
